added stop word ratio filter

--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -41,6 +41,7 @@
     "from datasketch import LeanMinHash, MinHash, MinHashLSH\n",
     "from rich.logging import RichHandler\n",
     "from squeakily.helpers import flagged_words, get_words\n",
+    "from squeakily.helpers import stopwords, stopword_ratios\n",
     "from tqdm.auto import tqdm"
    ]
   },
@@ -180,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| exporti\n",
+    "#| export\n",
     "def check_flagged_words(\n",
     "    document: str,                              # document to be analyzed\n",
     "    flagged_words: list = flagged_words[\"en\"],  # list of flagged words\n",
@@ -358,12 +359,71 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.6 ('llm_data_processing')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n llm_data_processing ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "test_str = \"This is a test string.\"\n",
     "\n",
     "assert check_word_number(test_str, min_word_threshold=5, max_word_threshold=10) == True\n",
     "assert check_word_number(test_str, min_word_threshold=1, max_word_threshold=4) == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def check_stop_word_ratio(\n",
+    "    document, # document to be analyzed\n",
+    "    stop_word_threshold=stopword_ratios['en'], # threshold for stop words\n",
+    "    stop_words=stopwords['en'], # list of stop words\n",
+    "    get_words_func=get_words, # function to get words from document\n",
+    "    dry_run=False, # if True, returns the ratio of stop words in the document\n",
+    ") -> bool: # returns True if document is below the threshold\n",
+    "\t\"\"\"\n",
+    "\tChecks if the document contains a high percentage of stop words.\n",
+    "\t\"\"\"\n",
+    "\tcond = True\n",
+    "\tif stop_words:\n",
+    "\t\tstop_word_ratio = _flag_word_ratio(\n",
+    "\t\t\tdocument,\n",
+    "\t\t\tstop_words,\n",
+    "\t\t\tget_words_func,\n",
+    "\t\t)\n",
+    "\t\tif dry_run:\n",
+    "\t\t\treturn stop_word_ratio\n",
+    "\t\telse:\n",
+    "\t\t\tcond = stop_word_ratio <= stop_word_threshold\n",
+    "\treturn cond\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|eval: false\n",
+    "assert check_stop_word_ratio(\"test\") == True\n",
+    "assert check_stop_word_ratio(\"the\") == False\n",
+    "assert check_stop_word_ratio(\"the funny llama\", stop_word_threshold=0.3) == False\n",
+    "assert check_stop_word_ratio(\"the funny llama\", stop_word_threshold=0.5) == True\n",
+    "# Test french stop words\n",
+    "assert check_stop_word_ratio(\"le\", stop_words=stopwords['fr']) == False\n",
+    "assert check_stop_word_ratio(\"le chien est beau\", stop_words=stopwords['fr'], dry_run=True) == 0.25\n",
+    "assert check_stop_word_ratio(\"le chien est beau\", stop_words=stopwords['fr'], stop_word_threshold=0.3) == True"
    ]
   },
   {
@@ -385,7 +445,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.6 ('llm_data_processing')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n llm_data_processing ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "#| export\n",
     "multiprocessing.set_start_method(\"fork\", force=True)\n",
@@ -403,7 +474,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.6 ('llm_data_processing')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n llm_data_processing ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "#| export\n",
     "def _hash_func(\n",
@@ -432,7 +514,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.6 ('llm_data_processing')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n llm_data_processing ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "result = _hash_func(0, \"Hello world!\", num_perm=128)\n",
     "assert result[\"__id__\"] == 0\n",
@@ -444,7 +537,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.6 ('llm_data_processing')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n llm_data_processing ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "#| export\n",
     "def _query_content(\n",
@@ -473,7 +577,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.6 ('llm_data_processing')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n llm_data_processing ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "data = [\"Hello world!\", \"Hello world\"]\n",
     "signatures = [_hash_func(i, content, num_perm=128) for i, content in enumerate(data)]\n",
@@ -491,7 +606,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.6 ('llm_data_processing')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n llm_data_processing ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "#| export\n",
     "def _jaccard_similarity(\n",
@@ -510,7 +636,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.6 ('llm_data_processing')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n llm_data_processing ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "assert _jaccard_similarity(\"a = 1\", \"a = 2\") == 0.3333333333333333\n",
     "assert _jaccard_similarity(\"a = 1\", \"a = 1\") == 1.0"
@@ -520,7 +657,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.6 ('llm_data_processing')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n llm_data_processing ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "#| export\n",
     "def _calculate_average_false_positive_rate(\n",
@@ -573,7 +721,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.6 ('llm_data_processing')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n llm_data_processing ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "#| export\n",
     "def _find_duplicate_communities(\n",
@@ -637,7 +796,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.6 ('llm_data_processing')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n llm_data_processing ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "#| export\n",
     "def minhash_dedup(\n",
@@ -750,66 +920,13 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                                "
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f1cc09fc302421086dfb22f4c5ef2de",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Indexing signatures...:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                                "
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "114e0ebac584423ebc236285738412f4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Constructing graph...:   0%|          | 0/373 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4b5c455cf514b29b43928733b1f7fe8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterating over communities...:   0%|          | 0/635 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                "
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.6 ('llm_data_processing')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n llm_data_processing ipykernel --update-deps --force-reinstall'"
      ]
     }
    ],
@@ -828,66 +945,13 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                                "
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d51f6d77fa4469895b65b993b64ca71",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Indexing signatures...:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                                "
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "767daeb9e48542c6a8403ed4676924a9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Constructing graph...:   0%|          | 0/373 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02ff878012b7473283c544f7be40b762",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Iterating over communities...:   0%|          | 0/635 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                "
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.6 ('llm_data_processing')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n llm_data_processing ipykernel --update-deps --force-reinstall'"
      ]
     }
    ],
@@ -905,29 +969,13 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Flower Fairies of the Spring ; Blackie , 1923 \n",
-      "\n",
-      " = = = Regular season = = = \n",
-      "\n",
-      " \" There 's Got to Be a Way \" ( 12 \" remix ) \n",
-      "\n",
-      " = = Early life = = \n",
-      "\n",
-      " = = Awards = = \n",
-      "\n",
-      " = = Critical reception = = \n",
-      "\n",
-      " = = History = = \n",
-      "\n",
-      " = = Service history = = \n",
-      "\n",
-      " = = Description = = \n",
-      "\n",
-      " = = Background = = \n",
-      "\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.6 ('llm_data_processing')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n llm_data_processing ipykernel --update-deps --force-reinstall'"
      ]
     }
    ],
@@ -943,7 +991,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.10.6 ('llm_data_processing')' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'conda install -n llm_data_processing ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
@@ -952,7 +1011,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('squeakily')",
+   "display_name": "Python 3.10.6 ('llm_data_processing')",
    "language": "python",
    "name": "python3"
   }
