Make fasttext model pickleable

--- a/nbs/03_helpers.ipynb
+++ b/nbs/03_helpers.ipynb
@@ -660,6 +660,7 @@
     "class FastTextLanguageDetector:\n",
     "    def __init__(self, model_path: str = \"/tmp/lid.176.bin\"):\n",
     "        import fasttext\n",
+    "        self.model_path = model_path\n",
     "        self.model = fasttext.load_model(model_path)\n",
     "\n",
     "    def get_language(self, text):\n",
@@ -683,7 +684,13 @@
     "            else:\n",
     "                raise Exception(\"Failed to download model\")\n",
     "        else:\n",
-    "            return cls(model_path=path)\n"
+    "            return cls(model_path=path)\n",
+    "    \n",
+    "    def __reduce__(self):\n",
+    "        return (self.__class__, (self.model_path,))\n",
+    "    \n",
+    "    def __eq__(self, other):\n",
+    "        return self.model_path == other.model_path\n"
    ]
   },
   {
@@ -716,6 +723,37 @@
     "# test combination\n",
     "lang, prob = fasttext_model.get_language(\"Hello, how are you? Hola, como estas?\")\n",
     "assert prob < 0.9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning : `load_model` does not return WordVectorModel or SupervisedModel any more, but a `FastText` object which is very similar.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#|eval: false\n",
+    "# check pickling works\n",
+    "import pickle\n",
+    "\n",
+    "with open(\"/tmp/fasttext_model.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(fasttext_model, f)\n",
+    "\n",
+    "with open(\"/tmp/fasttext_model.pkl\", \"rb\") as f:\n",
+    "    pickled_fasttext_model = pickle.load(f)\n",
+    "\n",
+    "lang, prob = fasttext_model.get_language(\"Hello, how are you?\")\n",
+    "p_lang, p_prob = pickled_fasttext_model.get_language(\"Hello, how are you?\")\n",
+    "assert lang == p_lang\n",
+    "assert prob == p_prob\n",
+    "assert pickled_fasttext_model == fasttext_model"
    ]
   },
   {
