Fix bug with newlines and fasttext

--- a/nbs/03_helpers.ipynb
+++ b/nbs/03_helpers.ipynb
@@ -664,7 +664,8 @@
     "        self.model = fasttext.load_model(model_path)\n",
     "\n",
     "    def get_language(self, text):\n",
-    "        prediction = self.model.predict(text, k=1) # returns top 2 matching languages\n",
+    "        lines = \" \".join(text.splitlines())\n",
+    "        prediction = self.model.predict(lines, k=1) # returns top 2 matching languages\n",
     "        lang, prob = prediction[0][0].replace(\"__label__\", \"\"), prediction[1][0]\n",
     "        return lang, prob\n",
     "\n",
@@ -723,6 +724,24 @@
     "# test combination\n",
     "lang, prob = fasttext_model.get_language(\"Hello, how are you? Hola, como estas?\")\n",
     "assert prob < 0.9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|eval: false\n",
+    "# test with multiple lines\n",
+    "\n",
+    "lang, prob = fasttext_model.get_language(\"Hello, how are you?\\nI am fine, thank you.\")\n",
+    "assert lang == \"en\"\n",
+    "assert prob > 0.9\n",
+    "\n",
+    "lang, prob = fasttext_model.get_language(\"Hello, how are you?\\n\\nI am fine, thank you.\")\n",
+    "assert lang == \"en\"\n",
+    "assert prob > 0.9"
    ]
   },
   {
