Fix dry run option for lang detection

--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -307,7 +307,10 @@
     "    \"\"\"\n",
     "    lang, prob = model.get_language(document)\n",
     "    if dry_run:\n",
-    "        return lang, prob\n",
+    "        if lang == language:\n",
+    "            return prob\n",
+    "        else:\n",
+    "            return -1.\n",
     "    else:\n",
     "        return language == lang and prob > language_threshold"
    ]
@@ -337,7 +340,12 @@
     "\n",
     "assert check_language(english_text, language=\"en\", language_threshold=0.85, model=fasttext_model) == True\n",
     "assert check_language(spanish_text, language=\"en\", language_threshold=0.85, model=fasttext_model) == False\n",
-    "assert check_language(chinese_text, language=\"en\", language_threshold=0.85, model=fasttext_model) == False"
+    "assert check_language(chinese_text, language=\"en\", language_threshold=0.85, model=fasttext_model) == False\n",
+    "\n",
+    "# test dry run\n",
+    "assert check_language(english_text, language=\"en\", language_threshold=0.85, model=fasttext_model, dry_run=True) > 0.\n",
+    "assert check_language(spanish_text, language=\"en\", language_threshold=0.85, model=fasttext_model, dry_run=True) == -1.\n",
+    "assert check_language(chinese_text, language=\"es\", language_threshold=0.85, model=fasttext_model, dry_run=True) == -1."
    ]
   },
   {
