Fix bug we global filter functions with concatenation and separation

--- a/nbs/04_tutorials.ipynb
+++ b/nbs/04_tutorials.ipynb
@@ -95,6 +95,7 @@
     "datasources = [\n",
     "    {\n",
     "        \"dataset\": ds,\n",
+    "        \"name\": \"wikitext\",\n",
     "        \"columns\": [\"text\"],\n",
     "        \"filters\": [],\n",
     "        \"cleaners\": [scrubber.clean],\n",
@@ -119,6 +120,7 @@
     "datasources = [\n",
     "    {\n",
     "        \"dataset\": ds,\n",
+    "        \"name\": \"wikitext\",\n",
     "        \"columns\": [\"text\"],\n",
     "        \"filters\": [],\n",
     "        \"cleaners\": [scrubber.clean, remove_empty_lines, remove_ip],\n",
@@ -473,7 +475,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.10.8 ('squeakily')",
    "language": "python",
    "name": "python3"
   }
