--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -112,6 +112,7 @@
     "datasources = [\n",
     "    {\n",
     "        \"dataset\": ds,\n",
+    "        \"name\": \"wikitext\",\n",
     "        \"columns\": [\"text\"],\n",
     "        \"filters\": [check_char_repetition, check_flagged_words],\n",
     "        \"cleaners\": [remove_empty_lines, normalize_whitespace],\n",
