Add initial stab at compression filter

--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -79,6 +79,64 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "def _compress_ratio(\n",
+    "    doc: str,               # document to be analyzed\n",
+    "    compression_level: int = 3, # compression level to use\n",
+    ") -> float:\n",
+    "    import zstandard as zstd\n",
+    "    \"\"\"\n",
+    "    Returns the ratio of the compressed document to the original document.\n",
+    "    \"\"\"\n",
+    "    bts = doc.encode(\"utf-8\")\n",
+    "    compressed_bts = zstd.compress(doc.encode(\"utf-8\"), compression_level)\n",
+    "    ratio = len(compressed_bts) / len(bts)\n",
+    "    return ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def check_compression_ratio(\n",
+    "    document,                           # document to be analyzed\n",
+    "    compression_threshold: float = 0.5, # threshold for compression ratio\n",
+    "    compression_level: int = 3,         # compression level to use\n",
+    "    dry_run=False,                      # if True, returns the ratio of character repetition\n",
+    ") -> bool: # returns True if document is below threshold\n",
+    "    \"\"\"\n",
+    "    Checks if the document is below the character repetition threshold.\n",
+    "    \"\"\"\n",
+    "    compress_ratio = _compress_ratio(\n",
+    "        document, compression_level=compression_level\n",
+    "    )\n",
+    "    if dry_run:\n",
+    "        return compress_ratio\n",
+    "    else:\n",
+    "        return compress_ratio <= compression_threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#|eval: false\n",
+    "test_str0 = \"aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa\"\n",
+    "test_str1 = \"This is a test string.\"\n",
+    "assert check_compression_ratio(test_str0, dry_run=True) < check_compression_ratio(test_str1, dry_run=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "def _char_rep_ratio(\n",
     "    doc: str, # document to be analyzed\n",
     "    char_rep_len: int, # length of character repetition\n",
@@ -1030,7 +1088,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('squeakily')",
+   "display_name": "squeakily",
    "language": "python",
    "name": "python3"
   }
