Hopefully make it so compression will reuse context

--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -79,16 +79,32 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "multiprocessing.set_start_method(\"fork\", force=True)\n",
+    "\n",
+    "zstd_cntxt = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "def _compress_ratio(\n",
     "    doc: str,               # document to be analyzed\n",
     "    compression_level: int = 3, # compression level to use\n",
     ") -> float:\n",
-    "    import zstandard as zstd\n",
     "    \"\"\"\n",
     "    Returns the ratio of the compressed document to the original document.\n",
     "    \"\"\"\n",
+    "    global zstd_cntxt\n",
+    "    if zstd_cntxt is None:\n",
+    "        import zstandard as zstd\n",
+    "        zstd_cntxt = zstd.ZstdCompressor(level=compression_level)\n",
     "    bts = doc.encode(\"utf-8\")\n",
-    "    compressed_bts = zstd.compress(doc.encode(\"utf-8\"), compression_level)\n",
+    "    compressed_bts = zstd_cntxt.compress(bts)\n",
+    "    # compressed_bts = zstd.compress(doc.encode(\"utf-8\"), compression_level)\n",
     "    ratio = len(compressed_bts) / len(bts)\n",
     "    return ratio"
    ]
@@ -524,8 +540,6 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "multiprocessing.set_start_method(\"fork\", force=True)\n",
-    "\n",
     "MINHASH_SEED = 115\n",
     "NON_ALPHA = re.compile(\"[^A-Za-z_0-9]\")\n",
     "\n",
