Allow user to set num_procs

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -77,7 +77,7 @@
     "    ):\n",
     "        self.datasources = datasources\n",
     "    \n",
-    "    def __run_filter(self, dataset, column, filter_fn, dry_run):\n",
+    "    def __run_filter(self, dataset, column, filter_fn, dry_run, num_proc):\n",
     "        \"\"\"\n",
     "        Run a filter on a dataset.\n",
     "        \"\"\"\n",
@@ -87,12 +87,12 @@
     "            logger.info(f\"Running in dry-run mode\")\n",
     "            return dataset.map(\n",
     "                lambda x: {f\"{name}_criteria\": filter_fn(x[column], dry_run=True)},\n",
-    "                num_proc=os.cpu_count(),\n",
+    "                num_proc=num_proc,\n",
     "            )\n",
     "        else:\n",
     "            return dataset.filter(\n",
     "                lambda x: filter_fn(x[column]),\n",
-    "                num_proc=os.cpu_count(),\n",
+    "                num_proc=num_proc,\n",
     "            )\n",
     "    \n",
     "    def run(\n",
@@ -102,6 +102,7 @@
     "        cleaning_first=False,   # Whether to run the cleaning transformations first\n",
     "        globals_first=False,    # Whether to run the global transformations first\n",
     "        dry_run=False,          # Whether to run the pipeline or only calculate the various criteria and add as a column\n",
+    "        num_proc=os.cpu_count() # Number of processes to use\n",
     "    ):\n",
     "        \"\"\"\n",
     "        Run the pipeline.\n",
@@ -115,14 +116,15 @@
     "                    logger.info(f\"Running cleaner: {name} on {column}\")\n",
     "                    self.datasources[i][\"dataset\"] = self.datasources[i][\"dataset\"].map(\n",
     "                        lambda x: {column: c(x[column])},\n",
-    "                        num_proc=os.cpu_count(),\n",
+    "                        num_proc=num_proc,\n",
     "                    )\n",
     "                for f in self.datasources[i][\"filters\"]:\n",
     "                    self.datasources[i][\"dataset\"] = self.__run_filter(\n",
     "                        self.datasources[i][\"dataset\"],\n",
     "                        column,\n",
     "                        f,\n",
-    "                        dry_run\n",
+    "                        dry_run,\n",
+    "                        num_proc\n",
     "                    )\n",
     "            else:\n",
     "                for f in self.datasources[i][\"filters\"]:\n",
@@ -130,14 +132,15 @@
     "                        self.datasources[i][\"dataset\"],\n",
     "                        column,\n",
     "                        f,\n",
-    "                        dry_run\n",
+    "                        dry_run,\n",
+    "                        num_proc\n",
     "                    )\n",
     "                for c in self.datasources[i][\"cleaners\"]:\n",
     "                    name = c.__name__\n",
     "                    logger.info(f\"Running cleaner: {name} on {column}\")\n",
     "                    self.datasources[i][\"dataset\"] = self.datasources[i][\"dataset\"].map(\n",
     "                        lambda x: {column: c(x[column])},\n",
-    "                        num_proc=os.cpu_count(),\n",
+    "                        num_proc=num_proc,\n",
     "                    )\n",
     "\n",
     "        if len(global_filters) > 0:\n",
@@ -167,7 +170,7 @@
     "                if not d.get(\"skip_global\", False):\n",
     "                    self.datasources[i][\"dataset\"] = global_dataset_with_meta.filter(\n",
     "                        lambda x: x[\"meta_data\"] == d[\"name\"],\n",
-    "                        num_proc=os.cpu_count(),\n",
+    "                        num_proc=num_proc,\n",
     "                    )"
    ]
   },
