--- a/nbs/02_clean.ipynb
+++ b/nbs/02_clean.ipynb
@@ -20,13 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
     "import re\n",
     "from faker import Faker\n",
+    "import ftfy\n",
     "\n",
     "fake = Faker()"
    ]
@@ -429,6 +430,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def fix_utf8_encoding(\n",
+    "    text: str,              # The text to fix\n",
+    ") -> str:                   # The fixed text\n",
+    "    \"\"\"Fix utf8 text using ftfy.\"\"\"\n",
+    "    return ftfy.fix_text(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test the fix_utf8_encoding function\n",
+    "bad_text = 'âœ” No problems'\n",
+    "assert fix_utf8_encoding(bad_text) == '✔ No problems'\n",
+    "bad_text = 'dÃ©jÃ  vu'\n",
+    "assert fix_utf8_encoding(bad_text) == 'déjà vu'\n",
+    "bad_text = 'Ã©'\n",
+    "assert fix_utf8_encoding(bad_text) == 'é'\n",
+    "bad_text = 'P&EACUTE;REZ'\n",
+    "assert fix_utf8_encoding(bad_text) == 'PÉREZ'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -440,9 +472,26 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('squeakily')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "3ad933181bd8a04b432d3370b9dc3b0662ad032c4dfaa4e4f1596c548f763858"
+   }
   }
  },
  "nbformat": 4,
