Add try catch for div by zero error

--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -113,8 +113,10 @@
     "        zstd_cntxt = zstd.ZstdCompressor(level=compression_level)\n",
     "    bts = doc.encode(\"utf-8\")\n",
     "    compressed_bts = zstd_cntxt.compress(bts)\n",
-    "    # compressed_bts = zstd.compress(doc.encode(\"utf-8\"), compression_level)\n",
-    "    ratio = len(compressed_bts) / len(bts)\n",
+    "    try:\n",
+    "        ratio = len(compressed_bts) / len(bts)\n",
+    "    except ZeroDivisionError:\n",
+    "        ratio = 0\n",
     "    return ratio"
    ]
   },
