Add filter for removing unparsable code

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -33715,7 +33715,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('squeakily')",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
