--- a/nbs/03_helpers.ipynb
+++ b/nbs/03_helpers.ipynb
@@ -7795,7 +7795,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('llm_data_processing')",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
