--- a/nbs/01_filter.ipynb
+++ b/nbs/01_filter.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -22,16 +23,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/fsx/nathan/miniconda3/envs/squeakily/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| export\n",
     "import datasets\n",
@@ -292,6 +284,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -332,6 +325,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -504,32 +498,67 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [17], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[39m# Test french stop words\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39massert\u001b[39;00m check_stop_word_ratio(\u001b[39m\"\u001b[39m\u001b[39mle\u001b[39m\u001b[39m\"\u001b[39m, stop_words\u001b[39m=\u001b[39mstopwords[\u001b[39m'\u001b[39m\u001b[39mfr\u001b[39m\u001b[39m'\u001b[39m]) \u001b[39m==\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m \u001b[39massert\u001b[39;00m check_stop_word_ratio(\u001b[39m\"\u001b[39m\u001b[39mle chien est beau\u001b[39m\u001b[39m\"\u001b[39m, stop_words\u001b[39m=\u001b[39mstopwords[\u001b[39m'\u001b[39m\u001b[39mfr\u001b[39m\u001b[39m'\u001b[39m], dry_run\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m) \u001b[39m==\u001b[39m \u001b[39m0.25\u001b[39m\n\u001b[1;32m      9\u001b[0m \u001b[39massert\u001b[39;00m check_stop_word_ratio(\u001b[39m\"\u001b[39m\u001b[39mle chien est beau\u001b[39m\u001b[39m\"\u001b[39m, stop_words\u001b[39m=\u001b[39mstopwords[\u001b[39m'\u001b[39m\u001b[39mfr\u001b[39m\u001b[39m'\u001b[39m], stop_word_threshold\u001b[39m=\u001b[39m\u001b[39m0.3\u001b[39m) \u001b[39m==\u001b[39m \u001b[39mTrue\u001b[39;00m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#|eval: false\n",
     "assert check_stop_word_ratio(\"test\") == True\n",
     "assert check_stop_word_ratio(\"the\") == False\n",
     "assert check_stop_word_ratio(\"the funny llama\", stop_word_threshold=0.3) == False\n",
     "assert check_stop_word_ratio(\"the funny llama\", stop_word_threshold=0.5) == True\n",
     "# Test french stop words\n",
     "assert check_stop_word_ratio(\"le\", stop_words=stopwords['fr']) == False\n",
-    "assert check_stop_word_ratio(\"le chien est beau\", stop_words=stopwords['fr'], dry_run=True) == 0.25\n",
-    "assert check_stop_word_ratio(\"le chien est beau\", stop_words=stopwords['fr'], stop_word_threshold=0.3) == True"
+    "assert check_stop_word_ratio(\"le chien est beau\", stop_words=stopwords['fr'], dry_run=True) == 0.5\n",
+    "assert check_stop_word_ratio(\"le chien est beau\", stop_words=stopwords['fr'], stop_word_threshold=0.3) == False"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def check_code_parsability(\n",
+    "    document, # document to be analyzed\n",
+    "    program_language=\"python\", # programming language to check\n",
+    ") -> bool: # returns True if the code is parsable\n",
+    "    \"\"\"\n",
+    "    Checks if the document contains parsable code.\n",
+    "    \"\"\"\n",
+    "    import code_tokenize as ctok\n",
+    "\n",
+    "    try:\n",
+    "        ctok.tokenize(document, lang=program_language, syntax_error=\"raise\")\n",
+    "        return True\n",
+    "    except SyntaxError:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Autoloading AST parser for javascript: Start download from Github.\n",
+      "WARNING:root:Start cloning the parser definition from Github.\n",
+      "WARNING:root:Compiling language for javascript\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test python code\n",
+    "assert check_code_parsability(\"print('hello world')\", program_language=\"python\") == True\n",
+    "assert check_code_parsability(\"print('hello world'\", program_language=\"python\") == False\n",
+    "# Test javascript code\n",
+    "assert check_code_parsability(\"console.log('hello world')\", program_language=\"javascript\") == True\n",
+    "assert check_code_parsability(\"console.log('hello world'\", program_language=\"javascript\") == False"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -537,6 +566,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1113,7 +1143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "squeakily",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
