--- a/nbs/04_tutorials.ipynb
+++ b/nbs/04_tutorials.ipynb
@@ -475,7 +475,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('squeakily')",
+   "display_name": "python3",
    "language": "python",
    "name": "python3"
   }
